# my-mind

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md  package.json  pnpm-lock.yaml
crates/my-mind-core/: Cargo.toml
crates/my-mind-core/src/: lib.rs
crates/my-mind-core/src/asr/: mod.rs  whisper_api.rs
crates/my-mind-core/src/audio/: capture.rs  encoder.rs  mod.rs
crates/my-mind-core/src/config/: mod.rs  schema.rs
crates/my-mind-core/src/history/: mod.rs
crates/my-mind-core/src/input/: clipboard.rs  focus.rs  mod.rs  simulator.rs
crates/my-mind-core/src/llm/: anthropic.rs  mod.rs  openai.rs  prompts.rs
crates/my-mind-core/src/pipeline/: mod.rs  state.rs
crates/my-mind-tauri/: Cargo.toml
crates/my-mind-tauri/src/: events.rs  state.rs
crates/my-mind-tauri/src/commands/: diagnosis.rs  history.rs  mod.rs  recording.rs  settings.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  setup.rs
