[workspace]
members = ["crates/my-mind-core", "crates/my-mind-tauri", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
my-mind-core = { path = "crates/my-mind-core" }
my-mind-tauri = { path = "crates/my-mind-tauri" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
