[package]
name = "my-mind-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cpal = "0.15"
hound = "3.5"
rubato = "0.16"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
arboard = "3"
enigo = "0.2"
toml = "0.8"
dirs = "6"
async-trait = "0.1"
rusqlite = { version = "0.34", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
