[package]
name = "my-mind-tauri"
version.workspace = true
edition.workspace = true

[dependencies]
my-mind-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tauri = { version = "2", features = [] }
